# osrm-jni-spring

./: README.md  build.gradle  settings.gradle
jni-osrm-tutorial/src/main/java/com/eraser/jniosrm/: JniosrmApplication.java  OsrmJNI.java
jni-osrm-tutorial/src/src++/: osrmJNI.cpp
jniosrm/src/main/java/com/eraser/jniosrm/: OsrmJNI.java
jniosrm/src/src++/: com_eraser_jniosrm_OsrmJNI.h  com_eraser_jniosrm_OsrmJNI_copy.h
route/: build.gradle  settings.gradle
route/src/main/java/com/eraser/route/: RouteApplication.java
route/src/main/java/com/eraser/route/common/annotation/: CoordinateValue.java
route/src/main/java/com/eraser/route/common/exception/: BusinessException.java  ErrorCode.java  GlobalExceptionHandler.java
route/src/main/java/com/eraser/route/common/response/: CommonResponse.java
route/src/main/java/com/eraser/route/config/: RouteAppConfig.java
route/src/main/java/com/eraser/route/controller/: RouteController.java
route/src/main/java/com/eraser/route/service/: OsrmJniUtil.java  RouteService.java  RouteServiceImpl.java
route/src/main/java/com/eraser/route/service/dto/: OsrmRouteDto.java  (+1 more)
route/src/main/resources/: application.properties
route/src/native/: CMakeLists.txt  com_eraser_route_service_OsrmJniUtil.h  osrmJniRoute.cpp
route/src/test/java/com/eraser/route/: RouteApplicationTests.java
src/main/java/com/eraser/jniosrm/: Controller.java  OsrmJNI.java  OsrmResponse.java
src/src++/: CMakeLists.txt  com_eraser_jniosrm_OsrmJNI.h  com_eraser_jniosrm_OsrmJNI_copy.h  osrmJNI.cpp
src/test/java/com/eraser/jniosrm/: JniosrmApplicationTests.java
(+1 files in other folders)
